test/gfx/none_comma_ommission.err
error: Unexpected character, expected ',', ';', or end of argument
In inline palette spec: #000,#none#fff
                                  ^
Conversion aborted after 1 error
